<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/img_List"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:padding="7dp"
        android:src="@drawable/ic_list_black"
        android:background="@drawable/blue_right_unselected"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/img_Map"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:padding="7dp"
        android:src="@drawable/ic_map_white"
        android:background="@drawable/blue_left_selected"
        app:layout_constraintTop_toTopOf="@+id/img_List"
        app:layout_constraintStart_toEndOf="@+id/img_List"/>

    <TextView
        android:id="@+id/txt_four"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:text="@string/_4_pm"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:background="@drawable/blue_left_unselected"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_one"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/_1_pm"
        android:background="@drawable/blue_right_selected"
        app:layout_constraintTop_toTopOf="@+id/txt_four"
        app:layout_constraintEnd_toStartOf="@+id/txt_four"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutCheckedText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="#E3D8D8"
        app:layout_constraintTop_toBottomOf="@id/img_List"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <CheckedTextView
            android:id="@+id/chkPickUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_check_circle_blue"
            android:text="@string/pickups"
            android:drawablePadding="5dp"
            android:textAlignment="center"
            android:textColor="@color/gradStop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/chkActive"
            app:layout_constraintHorizontal_bias="0.5"/>

        <CheckedTextView
            android:id="@+id/chkActive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_check_circle_grey"
            android:text="@string/active_deliveries"
            android:drawablePadding="5dp"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/chkInActive"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/chkPickUp"/>

        <CheckedTextView
            android:id="@+id/chkInActive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_check_circle_grey"
            android:text="@string/in_active_deliveries"
            android:drawablePadding="5dp"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/chkActive"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gradStop"
        app:layout_constraintTop_toBottomOf="@+id/layoutCheckedText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <FrameLayout
        android:id="@+id/map"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_doctor_list"
        tools:itemCount="4"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>