<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gradStart">

    <LinearLayout
        android:id="@+id/layoutDashboard"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/layoutDoctorSource"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/dashboardImg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_dashboard" />

        <TextView
            android:id="@+id/dashboardTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:textColor="@color/light_gray" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDoctorSource"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/layoutMedicalId"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/layoutDashboard"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/doctorImg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_person" />

        <TextView
            android:id="@+id/doctorTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor_source"
            android:textColor="@color/light_gray" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutMedicalId"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/layoutDoctorSource"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/medicalImg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_card" />

        <TextView
            android:id="@+id/medicalTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medical_id"
            android:textColor="@color/light_gray" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>