<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_add_person"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/gradStop"
                app:layout_constraintTop_toTopOf="@id/img_logo"
                app:layout_constraintStart_toEndOf="@id/img_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/img_logo"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_logo">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:id="@+id/lblUserName"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/username"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <EditText
                    android:id="@+id/txtUsername"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:background="@drawable/et_bg_black"
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:textColorHint="@color/black"
                    android:hint="@string/superman"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    app:layout_constraintStart_toEndOf="@+id/lblUserName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:id="@+id/lblEmail"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/emailaddress"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:background="@drawable/et_bg_black"
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:hint="@string/superman"
                    android:textColorHint="@color/black"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    app:layout_constraintStart_toEndOf="@+id/lblEmail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:id="@+id/lblFirstName"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/first_name"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <EditText
                    android:id="@+id/txtFirstName"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:background="@drawable/et_bg_black"
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:hint="@string/superman"
                    android:textColorHint="@color/black"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    app:layout_constraintStart_toEndOf="@+id/lblFirstName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:id="@+id/lblLastName"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/last_name"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <EditText
                    android:id="@+id/txtLastName"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:background="@drawable/et_bg_black"
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:hint="@string/superman"
                    android:textColorHint="@color/black"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    app:layout_constraintStart_toEndOf="@+id/lblLastName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:id="@+id/lblPassword"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:background="@drawable/et_bg_black"
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:hint="@string/superman"
                    android:textColorHint="@color/black"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    app:layout_constraintStart_toEndOf="@+id/lblPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:id="@+id/lblConfirmPassword"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/confirm_password"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <EditText
                    android:id="@+id/txtConfirmPassword"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:background="@drawable/et_bg_black"
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:hint="@string/superman"
                    android:textColorHint="@color/black"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    app:layout_constraintStart_toEndOf="@+id/lblConfirmPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/submit"
                    android:layout_gravity="end"
                    android:textAllCaps="false"
                    android:background="@drawable/green_side_border"
                    android:textColor="@color/colorPrimaryDarkDashboard"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>