<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_avatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/app_icon"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toTopOf="@+id/img_avatar"
                app:layout_constraintBottom_toBottomOf="@+id/img_avatar"
                app:layout_constraintStart_toEndOf="@+id/img_avatar"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="@string/scoot_brand"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="July 1, 1992"/>

            </LinearLayout>
            
            <TextView
                android:id="@+id/lblHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="50dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/medical_conditions"
                app:layout_constraintTop_toBottomOf="@+id/img_avatar"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/lblThing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="50dp"
                android:text="@string/hypertension"
                app:layout_constraintTop_toBottomOf="@+id/lblHeader"
                app:layout_constraintStart_toStartOf="parent"/>

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/lblThing"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/lblMedicalNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="50dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/medical_notes"
                app:layout_constraintTop_toBottomOf="@+id/view"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/txtMedicalNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="50dp"
                app:layout_constraintTop_toBottomOf="@+id/lblMedicalNote"
                app:layout_constraintStart_toStartOf="parent"/>

            <View
                android:id="@+id/view1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/txtMedicalNote"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/lblAllergies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="50dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="Allergies and rections"
                app:layout_constraintTop_toBottomOf="@+id/view1"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/txtAllergies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="50dp"
                app:layout_constraintTop_toBottomOf="@+id/lblAllergies"
                app:layout_constraintStart_toStartOf="parent"/>

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/txtAllergies"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/lblMedications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="50dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/medications"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/txtMedications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="50dp"
                app:layout_constraintTop_toBottomOf="@+id/lblMedications"
                app:layout_constraintStart_toStartOf="parent"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/txtMedications"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>